--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "hg+https://hg.osdn.net/view/fcf2/fcf-framework-unitest"
+    "url": "https://github.com/fcf-framework/fcf-framework-unitest.git"
   },
-  "homepage": "https://fcf-framework.tech/packages/fcf-framework-unitest",
   "keywords": [
-    "fcf-framework-unitest",
+    "fcf-framework",
     "unit test",
     "unittest",
     "unitest",
