--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fcf-framework-unitest",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Module for automatic testing both on the server side and on the browser side",
   "main": "unitest.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/fcf-framework/fcf-framework-unitest.git"
   },
-  "homepage": "https://fcf-framework.tech/packages/fcf-framework-unitest",
+  "homepage": "https://fcf-framework.is-a-fullstack.dev/packages/fcf-framework-unitest",
   "keywords": [
     "fcf-framework",
     "unit test",
